Fixed transparent colours in the map legend on IE browsers

--- a/water-levels/water-levels.css
+++ b/water-levels/water-levels.css
@@ -496,22 +496,36 @@ input[type="button"].mvc-button-automatic
 }
 .mvc-sub-watershed-colour.mvc-sub-watershed-normal
 {
+	background-color: #333333;
+	background-color: rgba(51,51,51,0.1);
 	background-color: #3333331a;
 }
 .mvc-sub-watershed-colour.mvc-sub-watershed-level-i
 {
+	background-color: #f3e90b;
+	border-color: #000000;
+	background-color: rgba(243,233,11,0.45);
+	border-color: rgba(243,233,11,1);
 	background-color: #f3e90b73;
-	border-color: #f3e90b;
+	border-color: #f3e90bff;
 }
 .mvc-sub-watershed-colour.mvc-sub-watershed-level-ii
 {
+	background-color: #f7881f;
+	border-color: #000000;
+	background-color: rgba(247,136,31,0.45);
+	border-color: rgba(247,136,31,1);
 	background-color: #f7881f73;
-	border-color: #f7881f;
+	border-color: #f7881fff;
 }
 .mvc-sub-watershed-colour.mvc-sub-watershed-level-iii
 {
+	background-color: #ea2328;
+	border-color: #000000;
+	background-color: rgba(234,35,40,0.45);
+	border-color: rgba(234,35,40,1);
 	background-color: #ea232873;
-	border-color: #ea2328;
+	border-color: #ea2328ff;
 }
 
 .station-button-icon.mvc-legend
